fixed git link and text align left

--- a/sass/layouts/content.scss
+++ b/sass/layouts/content.scss
@@ -46,7 +46,7 @@
             }
 
             > * {
-                text-align: justify;
+                text-align: left;
                 min-width: 500px;
                 
                 @media only screen and (max-width: 1024px) {
